make amendments for the errors due to the refactor